# Project-GV

./: Cargo.toml  README.md
src/: main.rs
src/components/: camera.rs  mod.rs  person.rs  player.rs  text.rs  ui.rs  world.rs
src/entities/: ground.rs  light.rs  mod.rs  player.rs
src/resources/: camera.rs  game.rs  mod.rs
src/spawns/: camera.rs  ground.rs  item.rs  light.rs  mod.rs  player.rs  structures.rs  ui.rs  wall.rs
src/states/: game.rs  menu.rs  mod.rs
src/systems/: camera.rs  mod.rs  player.rs  ui.rs  window.rs
