[package]
name = "project-gv"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.15.3", features = ["dynamic_linking"] }
bevy_rapier3d = { version = "0.29.0", features = [ "simd-stable", "debug-render-3d" ] }
log = "0.4.26"
env_logger = "0.11.7"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[workspace]
resolver = "2"

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
